--- a/playbook.yml
+++ b/playbook.yml
@@ -26,7 +26,7 @@
     become: yes
 
   - name: turn off firewall for install
-    command: systemctl disable firewalld
+    command: systemctl disable ufw
     become: yes
 
   - name: creates .ssh directory
